Guard against configuration mistakes leading to security issues
We should protect a user against config mistakes, where they forget to
set auth-type appropriately, while providing authenticator-specific
parameters.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,8 @@ unftp-auth-jsonfile = { version = "0.3.4", optional = true }
 unftp-sbe-rooter = "0.2.1"
 unftp-sbe-restrict = "0.1.2"
 url = "2.5.0"
+strum = { version = "0.26.2", features = ["derive"] }
+strum_macros = "0.26.2"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.2.5", optional = true }
